objects/Case.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>Zip__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aaa</fullName>
                </value>
                <value>
                    <fullName>Aa1</fullName>
                </value>
                <value>
                    <fullName>Aa2</fullName>
                </value>
                <value>
                    <fullName>Aa3</fullName>
                </value>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>Baa1</fullName>
                </value>
                <value>
                    <fullName>Baa2</fullName>
                </value>
                <value>
                    <fullName>Baa3</fullName>
                </value>
                <value>
                    <fullName>AA+</fullName>
                </value>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>AA-</fullName>
                </value>
                <value>
                    <fullName>A+</fullName>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>A-</fullName>
                </value>
                <value>
                    <fullName>BBB+</fullName>
                </value>
                <value>
                    <fullName>BBB</fullName>
                </value>
                <value>
                    <fullName>BBB-</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>B++</fullName>
                </value>
                <value>
                    <fullName>B+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates case to the survey that spawned it</description>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <inlineHelpText>Insurance Company</inlineHelpText>
        <label>Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Travelers</fullName>
                </value>
                <value>
                    <fullName>Illinois National Insurance Company</fullName>
                </value>
                <value>
                    <fullName>National Union Fire Insurance Company of Pittsburgh, PA</fullName>
                </value>
                <value>
                    <fullName>Landmark American Insurance Company</fullName>
                </value>
                <value>
                    <fullName>Hartford</fullName>
                </value>
                <value>
                    <fullName>AIG Europe Limited</fullName>
                </value>
                <value>
                    <fullName>Lloyds</fullName>
                </value>
                <value>
                    <fullName>ACE</fullName>
                </value>
                <value>
                    <fullName>Federal Insurance Company</fullName>
                </value>
                <value>
                    <fullName>Lexington Insurance Company</fullName>
                </value>
                <value>
                    <fullName>RSUI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <description>***ANY EDITS TO VALUES MUST BE MADE IN CUSTOM METADATA RECORDS FOR PROPER CASE COST TO CLOSE HANDLING***</description>
        <label>Request</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Access Modification</fullName>
                </value>
                <value>
                    <fullName>Accommodations</fullName>
                </value>
                <value>
                    <fullName>Account Request (Old)</fullName>
                </value>
                <value>
                    <fullName>Accreditation Questions</fullName>
                </value>
                <value>
                    <fullName>Add new field</fullName>
                </value>
                <value>
                    <fullName>Admin Privileges</fullName>
                </value>
                <value>
                    <fullName>Affiliate Development Request</fullName>
                </value>
                <value>
                    <fullName>Affiliate Instructor Questions - simple</fullName>
                </value>
                <value>
                    <fullName>Affiliate Mergers</fullName>
                </value>
                <value>
                    <fullName>Audit/Form Deletion</fullName>
                </value>
                <value>
                    <fullName>Audit Questions</fullName>
                </value>
                <value>
                    <fullName>Bereavement</fullName>
                </value>
                <value>
                    <fullName>CAL Onboarding Program</fullName>
                </value>
                <value>
                    <fullName>CAL Tutorials</fullName>
                </value>
                <value>
                    <fullName>Certificate Request</fullName>
                </value>
                <value>
                    <fullName>Certificate Request Questions</fullName>
                </value>
                <value>
                    <fullName>Change of Affiliate</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Change to VILT webex - moderate</fullName>
                </value>
                <value>
                    <fullName>CME/CEU Certificate</fullName>
                </value>
                <value>
                    <fullName>CME Audit Responses (Old)</fullName>
                </value>
                <value>
                    <fullName>Completion Certificate</fullName>
                </value>
                <value>
                    <fullName>Continuing Ed / Joint Providership Program</fullName>
                </value>
                <value>
                    <fullName>Contract Review Questions</fullName>
                </value>
                <value>
                    <fullName>Course Access (Old)</fullName>
                </value>
                <value>
                    <fullName>Course Completion Error</fullName>
                </value>
                <value>
                    <fullName>Course Launch Error</fullName>
                </value>
                <value>
                    <fullName>Coverage Questions</fullName>
                </value>
                <value>
                    <fullName>COVID-19: EPL</fullName>
                </value>
                <value>
                    <fullName>COVID-19: GL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Affiliate__c</fullName>
        <label>Affiliate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ARMS</fullName>
                </value>
                <value>
                    <fullName>PPFA National Office</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Human Rights Campaign</fullName>
                </value>
                <value>
                    <fullName>Mt. Baker Planned Parenthood</fullName>
                </value>
                <value>
                    <fullName>Planned Parenthood Arizona, Inc.</fullName>
                </value>
                <value>
                    <fullName>Planned Parenthood Association of the Mercer Area</fullName>
                </value>
                <value>
                    <fullName>Planned Parenthood Association of Utah</fullName>
                </value>
                <value>
                    <fullName>Planned Parenthood Columbia Willamette</fullName>
                </value>
                <value>
                    <fullName>Planned Parenthood Greater Memphis Region</fullName>
                </value>
                <value>
                    <fullName>Planned Parenthood Gulf Coast, Inc.</fullName>
                </value>
                <value>
                    <fullName>Planned Parenthood Hudson Peconic, Inc.</fullName>
                </value>
                <value>
                    <fullName>Planned Parenthood Keystone</fullName>
                </value>
                <value>
                    <fullName>Planned Parenthood League of Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Planned Parenthood Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Planned Parenthood Mar Monte</fullName>
                </value>
                <value>
                    <fullName>Planned Parenthood Mid and South Michigan</fullName>
                </value>
                <value>
                    <fullName>Planned Parenthood Minnesota, North Dakota, South Dakota</fullName>
                </value>
                <value>
                    <fullName>Planned Parenthood Mohawk Hudson</fullName>
                </value>
                <value>
                    <fullName>Planned Parenthood Northern California</fullName>
                </value>
                <value>
                    <fullName>Planned Parenthood South, East and North Florida</fullName>
                </value>
                <value>
                    <fullName>Planned Parenthood of Central and Greater Northern New Jersey, Inc.</fullName>
                </value>
                <value>
                    <fullName>Planned Parenthood of Central and Western New York, Inc.</fullName>
                </value>
                <value>
                    <fullName>Planned Parenthood of Central Oklahoma, Inc.</fullName>
                </value>
                <value>
                    <fullName>Planned Parenthood of Collier County</fullName>
                </value>
                <value>
                    <fullName>Planned Parenthood of Delaware</fullName>
                </value>
                <value>
                    <fullName>Planned Parenthood of Greater Ohio</fullName>
                </value>
                <value>
                    <fullName>Planned Parenthood of Greater Orlando, Inc.</fullName>
                </value>
                <value>
                    <fullName>Planned Parenthood of Greater Texas, Inc.</fullName>
                </value>
                <value>
                    <fullName>Planned Parenthood of Greater Washington and North Idaho</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_No__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <description>User Name for RQPS Credentialing</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>User Name for RQPS Credentialing</inlineHelpText>
        <label>XXX-User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Debug__c</fullName>
        <description>Used to debug PB Process Builder - Case - Estimate Cost of Case</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Cost Debug</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_Event__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Live Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Update_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User to run process Case - Estimate Cost of Case manually</description>
        <label>Update Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Policy_Limit__c</fullName>
        <description>Used to store Policy claim limits</description>
        <inlineHelpText>The highest amount a Policy will pay for a claim.</inlineHelpText>
        <label>Policy Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Surveys_Sent__c</fullName>
        <label>Surveys Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>XXX-Account Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Course_Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Survey</label>
        <referenceTo>Course_Survey__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master_Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Course</label>
        <referenceTo>Master_Course__c</referenceTo>
        <relationshipLabel>Cases (Certificate Requests)</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Policy_Issued__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date the policy was Issued.</inlineHelpText>
        <label>Policy Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Provider_Name__c</fullName>
        <description>Mapps to Event Actions Provider Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>XXX-Verified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claims_History__c</fullName>
        <label>Claims History</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Version</label>
        <referenceTo>Version__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Covid_specific__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Covid-specific</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Used to store the Effective Date of Insurance policies.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Effective Date of a policy.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Quarter__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE(CreatedDate))) &amp;



(if( MONTH(DATEVALUE(CreatedDate)) &lt;4,&quot;Q1&quot;,

if( MONTH(DATEVALUE(CreatedDate)) &lt;7,&quot;Q2&quot;,

if( MONTH(DATEVALUE(CreatedDate)) &lt;10,&quot;Q3&quot;,

&quot;Q4&quot;

))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Degree__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>XXX-Medical Degree</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>XXX-Requestor Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Used to store the Expiration Date of Insurance policies.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Expiration Date of a policy</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort__c</fullName>
        <label>Level of Effort</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Easy</fullName>
                </value>
                <value>
                    <fullName>Average</fullName>
                    <default>true</default>
                    <label>Average</label>
                </value>
                <value>
                    <fullName>Difficult</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sertus_Resource__c</fullName>
        <label>Sertus Resource</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Andrew</fullName>
                </value>
                <value>
                    <fullName>Jen</fullName>
                </value>
                <value>
                    <fullName>Kris</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supervisor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Supervisor Name of the requestor</inlineHelpText>
        <label>XXX-Supervisor Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Supervisor Name)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_of_Consult__c</fullName>
        <label>XXX-Type of Consult</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Move the Dot</fullName>
                </value>
                <value>
                    <fullName>Merger</fullName>
                </value>
                <value>
                    <fullName>RQM Orientation</fullName>
                </value>
                <value>
                    <fullName>AED Recommendation</fullName>
                </value>
                <value>
                    <fullName>AED Requirement</fullName>
                </value>
                <value>
                    <fullName>Offsite Review</fullName>
                </value>
                <value>
                    <fullName>Evaluation of RQM Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Avg_Min_to_Close__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Average number of minutes to close a case based on the Case Reason and Request on the case record. This field will be populated by Process Builder  (Case Estimate Cost to Close) when a case is closed. JA</description>
        <inlineHelpText>Average number of minutes to close a case based on the Case Reason and Request on the record.</inlineHelpText>
        <label>Avg Minutes to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_for_Certs__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit for Certs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Survey_Sent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This will auto-populate when the survey is sent out via  workflow rule</inlineHelpText>
        <label>Date Survey Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forward_to_Xerox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added on 8.19.14</description>
        <inlineHelpText>Check off this box when a request needs to be sent to Xerox/PPFA IT Help Desk for resolution.</inlineHelpText>
        <label>XXX-Forward to Xerox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_of_Coverage__c</fullName>
        <description>Used to store what line of coverage a policy is for.</description>
        <label>Line of Coverage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Crime</fullName>
                </value>
                <value>
                    <fullName>D&amp;O</fullName>
                </value>
                <value>
                    <fullName>Employed Lawyers</fullName>
                </value>
                <value>
                    <fullName>EPL</fullName>
                </value>
                <value>
                    <fullName>ERISA Bond</fullName>
                </value>
                <value>
                    <fullName>Fiduciary</fullName>
                </value>
                <value>
                    <fullName>Foreign Package</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous E&amp;O</fullName>
                </value>
                <value>
                    <fullName>Products Liability</fullName>
                </value>
                <value>
                    <fullName>Sexual Molestation Liability</fullName>
                </value>
                <value>
                    <fullName>Specialty E&amp;O</fullName>
                </value>
                <value>
                    <fullName>Surety</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Responses__c</fullName>
        <label>Survey Responses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Contract__c</fullName>
        <label>Type of Contract</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Affiliation</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Grant</fullName>
                </value>
                <value>
                    <fullName>Lease</fullName>
                </value>
                <value>
                    <fullName>Medical Group</fullName>
                </value>
                <value>
                    <fullName>Memo of Understanding</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Purchasing Agreement</fullName>
                </value>
                <value>
                    <fullName>Service Agreement</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sys_AASCTeamType__c</fullName>
        <label>sys_AASCTeamType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New/Update</fullName>
                </value>
                <value>
                    <fullName>Removal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sys_EmailUpdates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>sys_EmailUpdates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Avg_Cost_to_Close__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Average cost to close the case based on the number of average hours to close a case multiplied by the average pay rate. This field is calculated by Process Builder (Case Estimate Cost to Close) and Flow (Case Calculate Avg Hours and Case) when a case is closed. JA</description>
        <inlineHelpText>Average Cost to Close the case based on the number of average minutes multiplied the average pay rate.</inlineHelpText>
        <label>Avg Cost to Close</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Type_Copy__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>XXX-Service Type Copy</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_With_Support__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent with support.</description>
        <inlineHelpText>The time in business hours that this case spent with support.</inlineHelpText>
        <label>Time With Support</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Insurance__c</fullName>
        <label>Type of Insurance</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Property</fullName>
                </value>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Workers Comp</fullName>
                </value>
                <value>
                    <fullName>Retro</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Products Completed Operations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Additional_Insured__c</fullName>
        <label>Additional Insured</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Avg_Hours_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to manually set the Avg Hours to Close field.</description>
        <inlineHelpText>Check this box to manually set the Avg Hours to Close field.</inlineHelpText>
        <label>Avg Hours Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Avg_Hours_to_Close__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Average number of hours to close a case based on the case reason and request on the record. This number will be populated by Process Builder  (Case Estimate Cost to Close) and Flow (Case Calculate Avg Hours and Case) 
once the case is closed. JA</description>
        <inlineHelpText>Average number of hours to close a case based on the case reason and request on the record. This number will be populated by Process Builder once the case is closed.</inlineHelpText>
        <label>Avg Hours to Close</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Certificate_Holder__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Certificate Holder</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coverage_Requested__c</fullName>
        <description>Mapped to old field on &quot;EventAction/Type&quot;Coverage(s)</description>
        <label>XXX-Coverage Requested</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Close</fullName>
                </value>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Non-Medical</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Status_Change__c</fullName>
        <description>Stores the last time the status changed -- used by the Case Business Hours Tools package.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Status Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Property_Address_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Property Address 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Property_Address_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Property Address 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Request__c</fullName>
        <label>Reason for Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Technology Issue or Question</fullName>
                </value>
                <value>
                    <fullName>AASC Survey Issue or Question</fullName>
                </value>
                <value>
                    <fullName>Cyber Survey Issue or Question</fullName>
                </value>
                <value>
                    <fullName>Location Issue or Question</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_With_Customer__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The time in business hours that this case spent in the hands of the customer.</description>
        <inlineHelpText>The time in business hours that this case spent in the hands of the customer.</inlineHelpText>
        <label>Time With Customer</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
</CustomObject>